--- a/LinkedTemplates/settings.json
+++ b/LinkedTemplates/settings.json
@@ -18,7 +18,7 @@
         "identityProviders": {
             "type": "array",
             "metadata": {
-                "description": "Array of identity providers to be synched with UEBA. Valid identity providers are 'ActiveDirectory' and 'AzureActiveDirectory'"
+                "description": "Array of identity providers to be synched with UEBA. Valid identity providers are 'ActiveDirectory' and 'MicrosoftEntraID'"
             }
         },
         "enableDiagnostics": {
