--- a/LinkedTemplates/settings.json
+++ b/LinkedTemplates/settings.json
@@ -88,6 +88,26 @@
                 ],
                 "metrics": []
             }
+        },
+        {
+            "type": "Microsoft.Insights/diagnosticSettings",
+            "apiVersion": "2021-05-01-preview",
+            "name": "SubscriptionDiagnostics",
+            "scope": "[subscription().id]",
+            "properties": {
+                "workspaceId": "[resourceId('Microsoft.OperationalInsights/workspaces', parameters('workspaceName'))]",
+                "logs": [
+                    { "category": "Administrative", "enabled": true },
+                    { "category": "Security", "enabled": true },
+                    { "category": "ServiceHealth", "enabled": true },
+                    { "category": "Alert", "enabled": true },
+                    { "category": "Recommendation", "enabled": true },
+                    { "category": "Policy", "enabled": true },
+                    { "category": "Autoscale", "enabled": true },
+                    { "category": "ResourceHealth", "enabled": true }
+                ],
+                "metrics": []
+            }
         }
     ],
     "outputs": {}
