--- a/LinkedTemplates/settings.json
+++ b/LinkedTemplates/settings.json
@@ -101,6 +101,11 @@
                 "template": {
                     "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
                     "contentVersion": "1.0.0.0",
+                    "parameters": {
+                        "workspaceName": {
+                            "type": "string"
+                        }
+                    },
                     "resources": [
                         {
                             "type": "Microsoft.Insights/diagnosticSettings",
@@ -124,7 +129,11 @@
                         }
                     ]
                 },
-                "parameters": {}
+                "parameters": {
+                    "workspaceName": {
+                        "value": "[parameters('workspaceName')]"
+                    }
+                }
             }
         }
     ],
